# django-migrations-inspector

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli.md  development.md  getting-started.md  index.md  rollback.md  visualization.md
release/: 0.1.0.md
src/django_migration_inspector/: __about__.py  __init__.py  apps.py  config.py  constants.py  exceptions.py
src/django_migration_inspector/analyzers/: __init__.py  graph_intelligence.py  risk_engine.py  rollback_simulator.py
src/django_migration_inspector/django_adapter/: __init__.py  app_ignore.py  compat.py  graph.py  loader.py  operations.py  planner.py  rollback.py
src/django_migration_inspector/domain/: __init__.py  enums.py  keys.py  models.py  plans.py  reports.py
src/django_migration_inspector/management/commands/: __init__.py  migration_inspect.py
src/django_migration_inspector/renderers/: __init__.py  base.py  common.py  dot.py  json.py  mermaid.py  risk_json.py  risk_text.py  rollback_json.py  rollback_text.py  text.py
src/django_migration_inspector/risk_rules/: __init__.py  base.py  data_migrations.py  destructive.py  unknowns.py
src/django_migration_inspector/services/: __init__.py  inspect_service.py  risk_service.py  rollback_service.py
tests/: __init__.py  test_app_ignore.py  test_graph_service.py  test_loader.py  test_management_command.py  test_risk_service.py  test_rollback_adapter.py  test_rollback_service.py  test_visual_renderers.py
tests/fixtures/: __init__.py
tests/fixtures/test_project/: __init__.py  settings.py  urls.py
tests/fixtures/test_project/test_apps/: __init__.py
tests/fixtures/test_project/test_apps/analytics/: __init__.py  apps.py
tests/fixtures/test_project/test_apps/analytics/migrations/: 0001_initial.py  0002_add_payload.py  0002_add_source.py  __init__.py
tests/fixtures/test_project/test_apps/billing/: __init__.py  apps.py
tests/fixtures/test_project/test_apps/billing/migrations/: 0001_initial.py  0002_remove_reference.py  0003_irreversible_cleanup.py  __init__.py
tests/fixtures/test_project/test_apps/catalog/: __init__.py  apps.py
tests/fixtures/test_project/test_apps/catalog/migrations/: 0001_initial.py  __init__.py
tests/fixtures/test_project/test_apps/inventory/: __init__.py  apps.py
tests/fixtures/test_project/test_apps/inventory/migrations/: 0001_initial.py  0002_add_sku.py  0002_add_status.py  0003_merge_0002_add_sku_0002_add_status.py  __init__.py
